5.CKAD/5.ServicesAndNetworking/ingress/ingress_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-ingress
spec:
  selector:
    matchLabels:
      name: nginx-ingress
  type: NodePort
  ports:
  - port: 80
    targerPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: http
