5.CKAD/5.ServicesAndNetworking/ingress/ingress-wear-watch.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ingress-wear-watch
spec:
  rules:
  - host: wear.myonline-store.com
  - http:
      paths:
      - path: /wear
        backend:
          serviceName: wear-service
          servicePort: 80
  - host: watch.myonline-store.com
  - http:
    paths:
    - path: /watch
      backend:
        serviceName: watch-service
        servicePort: 80
